Preparing for release

--- a/src/html/example.html
+++ b/src/html/example.html
@@ -83,6 +83,13 @@
         />
       </picture>
 
+      <button aria-controls="audio-player">Play</button>
+      <div>
+        <audio id="audio-player" controls>
+          <source src="audio.mp3" type="audio/mp3" />
+        </audio>
+      </div>
+
       <div className="dialog_form_item">
         <label htmlFor="special_instructions">
           <span className="label_text">Special instructions:</span>
